cambios agregamos sitio de twitch

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        Hola estudiantes esto es un sitio web
-        sigueme en twitter si tienes dudas preguntame.
+        Hola amigas y amigos esto es un sitio web
+        sigueme en twitter si tienes dudas preguntame en vivo en mi twicht.
     </p>
 </body>
 </html>
